# lp-0008-logos-agent-module

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  LEARNING.md  LICENSE  README.md  SOLUTION_LP-0008.md  SUBMISSION.md  demo.sh
.github/: sequencer_config.json
.github/workflows/: ci.yml
agent-cli/: Cargo.toml  README.md
agent-cli/src/: main.rs
basecamp-app/: README.md  index.html  module.json
docs/: A2A_BINDING.md  CI_STATUS.md  CU_COSTS.md  DEPLOYMENT.md  EVIDENCE_LOCAL.md  EVIDENCE_PARTIALS.md  EVIDENCE_PEERS.md  F8_AUTONOMOUS_PAYMENT_EVIDENCE.md  F8_DISCOVERY_FIX.md  F8_LINUX_DEMO_PLAN.md  F8_LINUX_EVIDENCE.txt  F8_LINUX_FULL_EVIDENCE.txt  F8_LINUX_STATUS.md  F8_LINUX_VIDEO_NARRATION.md  LOCAL_F10_EVIDENCE.md  MESSAGING_TESTNET_EVIDENCE.md  REPO_MANIFEST.md  SECURITY_MODEL.md  SKILL_INTERFACE.md  STORAGE_TESTNET_EVIDENCE.md  TEAM_QUESTION_F8.md  TESTNET_EVIDENCE.md  TESTNET_EVIDENCE_V020.md  VIDEO_NARRATION.md  lp0008-demo.cast  lp0008-f8-linux-demo.cast  lp0008-full-a.cast  lp0008-settle-demo.cast  uc-blockchain.cast  uc-messaging.cast  uc-storage.cast
lez-build/common/: Cargo.toml
lez-build/nssa/: Cargo.toml
lez-build/nssa/core/: Cargo.toml
lez-build/sequencer/service/rpc/: Cargo.toml
lez-build/sequencer/service/rpc/src/: lib.rs
lez-build/wallet/: Cargo.toml
lez-wallet-module/: BUILD.md  PLAN.md
lez-wallet-module/lez-agent-cli/: Cargo.toml
lez-wallet-module/lez-agent-cli/src/: main.rs
lez-wallet-module/lez-wallet-core/: Cargo.toml
lez-wallet-module/lez-wallet-core/src/: ffi.rs  keys.rs  keystore.rs  lib.rs  provider.rs
lez-wallet-module/lez-wallet-core/tests/: integration_test.rs
lez-wallet-module/qt-module/: CMakeLists.txt  flake.nix  lez_wallet_ffi.h  manifest.json  metadata.json  variant
lez-wallet-module/qt-module/src/: lez_wallet_module_impl.cpp  lez_wallet_module_impl.h
patches/: README.md  liblogosdelivery-lightpush-legacy-codec.patch  logos-cpp-sdk-onEvent-connect-after-init.patch
scaffold/: CMakeLists.txt  README.md  flake.nix  logos_mode.h  metadata.json
scaffold/interfaces/: chat_module_api.cpp  chat_module_api.h  delivery_module_api.cpp  delivery_module_api.h  lez_wallet.h  skill.h  storage_module_api.cpp  storage_module_api.h
scaffold/src/: agent_module_impl.cpp  agent_module_impl.h
scripts/: build-with-f8-patch.sh  setup.sh
tests/: README.md  demo-a2a-discovery.sh  demo-agent.sh  demo-f8-linux-full.sh  demo-full-a.sh  demo-real.sh  demo-settle.sh  demo-testnet.sh  e2e-dev.sh  e2e.sh  lez-seq-config.json
