[package]
name = "lez-agent-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for lez-wallet-core: account, balance, send, sync, history, program ops"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lez"
path = "src/main.rs"

[dependencies]
lez-wallet-core = { path = "../lez-wallet-core", features = ["lez-bridge"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
